--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "probot": "^9.0.0",
-    "marked": "^0.8.0"
+    "marked": "^4.0.10",
+    "probot": "^9.0.0"
   },
   "devDependencies": {
-    "jest": "^23.2.0",
+    "jest": "^27.4.7",
     "smee-client": "^1.0.1"
   },
   "engines": {
